[project]
name = "bibibigtable"
version = "0.1.0"
description = "Big sql table or excel processing"
authors = [
    {name = "Chunqi SHI", email = "chunqishi@gmail.com"},
]
dependencies = [
    #    "datatable>=1.1.0",
    #    "xlrd==1.2.0",
    #    "dask>=2024.4.2",
    #    "modin[dask]>=0.29.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.2",
    "loguru>=0.7.2",
    "XlsxWriter>=3.2.0",
    "python-calamine>=0.2.0",
    "packaging>=24.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
